full and finale

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                         id="input-word">
                                 </div>
                                 <div class="col-auto mx-2 my-2">
-                                    <button type="submit" class="btn btn-light" id="search-button">
+                                    <button type="button" class="btn btn-light" id="search-button">
                                         Search
                                         <span class="dot align-bottom mb-2"></span>
                                         <span class="dot align-bottom mb-2"></span>
